# PoetryHour

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/nilio/poetryhour/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/nilio/poetryhour/: GemmaClient.kt  MainActivity.kt  MainActivity.kt.bak  NativeTokenizer.kt
app/src/main/java/com/nilio/poetryhour/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/nilio/poetryhour/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
